ANTLR-SL/grammar/.antlr/SLParser.java
// Generated from /home/fabiotovar/Proyectos/Lenguajes/ANTLR-SL/grammar/SLParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, COMMENT=2, BLOCK_COMMENT=3, NEW_LINE=4, PROGRAMA=5, CONST=6, 
		TIPOS=7, VAR=8, NUMERICO=9, CADENA=10, LOGICO=11, SUBRUTINA=12, INICIO=13, 
		REF=14, FIN=15, IF=16, THEN=17, ELSE=18, ENDIF=19, RETORNA=20, LOGICO_LITERAL=21, 
		REGISTRO=22, TENSOR=23, SENTENCIAS=24, ID=25, NUMERICO_LITERAL=26, CADENA_LITERAL=27, 
		PLUS=28, MINUS=29, ASTERISK=30, DIVISION=31, POWER=32, MOD=33, SEMI=34, 
		DOUBLE_POINT=35, BOOL_OP=36, ASSIGN=37, POINT=38, COMMA=39, LEFT_PAR=40, 
		RIGHT_PAR=41, LEFT_BRACE=42, RIGHT_BRACE=43, LEFT_BRACKET=44, RIGHT_BRACET=45, 
		ANY=46;
	public static final int
		RULE_programa = 0, RULE_programaprc = 1, RULE_declaraciones = 2, RULE_consts = 3, 
		RULE_const_ = 4, RULE_tipos = 5, RULE_tipo = 6, RULE_vars = 7, RULE_var = 8, 
		RULE_explicitvar = 9, RULE_opt = 10, RULE_listaid = 11, RULE_literal = 12, 
		RULE_tipobasico = 13, RULE_tipobasico2 = 14, RULE_tipobasico3 = 15, RULE_tensor = 16, 
		RULE_registro = 17, RULE_subrutinas = 18, RULE_subrutina = 19, RULE_procedimiento = 20, 
		RULE_funcion = 21, RULE_parametros = 22, RULE_parametro = 23, RULE_sentencias = 24;
	public static final String[] ruleNames = {
		"programa", "programaprc", "declaraciones", "consts", "const_", "tipos", 
		"tipo", "vars", "var", "explicitvar", "opt", "listaid", "literal", "tipobasico", 
		"tipobasico2", "tipobasico3", "tensor", "registro", "subrutinas", "subrutina", 
		"procedimiento", "funcion", "parametros", "parametro", "sentencias"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'programa'", "'const'", "'tipos'", "'var'", 
		"'numerico'", "'cadena'", "'logico'", "'subrutina'", "'inicio'", "'ref'", 
		"'fin'", "'if'", "'then'", "'else'", "'endif'", "'retorna'", null, "'registro'", 
		"'tensor'", "'sentencias'", null, null, null, "'+'", "'-'", "'*'", "'/'", 
		"'^'", "'%'", "';'", "':'", null, "'='", "'.'", "','", "'('", "')'", "'{'", 
		"'}'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "COMMENT", "BLOCK_COMMENT", "NEW_LINE", "PROGRAMA", 
		"CONST", "TIPOS", "VAR", "NUMERICO", "CADENA", "LOGICO", "SUBRUTINA", 
		"INICIO", "REF", "FIN", "IF", "THEN", "ELSE", "ENDIF", "RETORNA", "LOGICO_LITERAL", 
		"REGISTRO", "TENSOR", "SENTENCIAS", "ID", "NUMERICO_LITERAL", "CADENA_LITERAL", 
		"PLUS", "MINUS", "ASTERISK", "DIVISION", "POWER", "MOD", "SEMI", "DOUBLE_POINT", 
		"BOOL_OP", "ASSIGN", "POINT", "COMMA", "LEFT_PAR", "RIGHT_PAR", "LEFT_BRACE", 
		"RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACET", "ANY"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public ProgramaprcContext programaprc() {
			return getRuleContext(ProgramaprcContext.class,0);
		}
		public SubrutinasContext subrutinas() {
			return getRuleContext(SubrutinasContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SLParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			programaprc();
			setState(51);
			subrutinas();
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaprcContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(SLParser.INICIO, 0); }
		public TerminalNode FIN() { return getToken(SLParser.FIN, 0); }
		public TerminalNode PROGRAMA() { return getToken(SLParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public ProgramaprcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programaprc; }
	}

	public final ProgramaprcContext programaprc() throws RecognitionException {
		ProgramaprcContext _localctx = new ProgramaprcContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programaprc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROGRAMA) {
				{
				setState(54);
				match(PROGRAMA);
				setState(55);
				match(ID);
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << TIPOS) | (1L << VAR))) != 0)) {
				{
				setState(58);
				declaraciones();
				}
			}

			setState(61);
			match(INICIO);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENTENCIAS) {
				{
				setState(62);
				sentencias();
				}
			}

			setState(65);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionesContext extends ParserRuleContext {
		public List<TerminalNode> CONST() { return getTokens(SLParser.CONST); }
		public TerminalNode CONST(int i) {
			return getToken(SLParser.CONST, i);
		}
		public List<ConstsContext> consts() {
			return getRuleContexts(ConstsContext.class);
		}
		public ConstsContext consts(int i) {
			return getRuleContext(ConstsContext.class,i);
		}
		public List<TerminalNode> TIPOS() { return getTokens(SLParser.TIPOS); }
		public TerminalNode TIPOS(int i) {
			return getToken(SLParser.TIPOS, i);
		}
		public List<TiposContext> tipos() {
			return getRuleContexts(TiposContext.class);
		}
		public TiposContext tipos(int i) {
			return getRuleContext(TiposContext.class,i);
		}
		public List<TerminalNode> VAR() { return getTokens(SLParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(SLParser.VAR, i);
		}
		public List<VarsContext> vars() {
			return getRuleContexts(VarsContext.class);
		}
		public VarsContext vars(int i) {
			return getRuleContext(VarsContext.class,i);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaraciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONST:
					{
					{
					setState(67);
					match(CONST);
					setState(68);
					consts();
					}
					}
					break;
				case TIPOS:
					{
					{
					setState(69);
					match(TIPOS);
					setState(70);
					tipos();
					}
					}
					break;
				case VAR:
					{
					{
					setState(71);
					match(VAR);
					setState(72);
					vars();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << TIPOS) | (1L << VAR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstsContext extends ParserRuleContext {
		public List<Const_Context> const_() {
			return getRuleContexts(Const_Context.class);
		}
		public Const_Context const_(int i) {
			return getRuleContext(Const_Context.class,i);
		}
		public ConstsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consts; }
	}

	public final ConstsContext consts() throws RecognitionException {
		ConstsContext _localctx = new ConstsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_consts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				const_();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_Context extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(SLParser.ASSIGN, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public OptContext opt() {
			return getRuleContext(OptContext.class,0);
		}
		public Const_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_; }
	}

	public final Const_Context const_() throws RecognitionException {
		Const_Context _localctx = new Const_Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_const_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(ID);
			setState(83);
			match(ASSIGN);
			setState(84);
			literal();
			setState(85);
			opt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TiposContext extends ParserRuleContext {
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public TiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipos; }
	}

	public final TiposContext tipos() throws RecognitionException {
		TiposContext _localctx = new TiposContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				tipo();
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public TerminalNode DOUBLE_POINT() { return getToken(SLParser.DOUBLE_POINT, 0); }
		public TipobasicoContext tipobasico() {
			return getRuleContext(TipobasicoContext.class,0);
		}
		public OptContext opt() {
			return getRuleContext(OptContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ID);
			setState(93);
			match(DOUBLE_POINT);
			setState(94);
			tipobasico();
			setState(95);
			opt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				var();
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public ListaidContext listaid() {
			return getRuleContext(ListaidContext.class,0);
		}
		public TerminalNode DOUBLE_POINT() { return getToken(SLParser.DOUBLE_POINT, 0); }
		public ExplicitvarContext explicitvar() {
			return getRuleContext(ExplicitvarContext.class,0);
		}
		public OptContext opt() {
			return getRuleContext(OptContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			listaid();
			setState(103);
			match(DOUBLE_POINT);
			setState(104);
			explicitvar();
			setState(105);
			opt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExplicitvarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public TipobasicoContext tipobasico() {
			return getRuleContext(TipobasicoContext.class,0);
		}
		public ExplicitvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explicitvar; }
	}

	public final ExplicitvarContext explicitvar() throws RecognitionException {
		ExplicitvarContext _localctx = new ExplicitvarContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_explicitvar);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(ID);
				}
				break;
			case NUMERICO:
			case CADENA:
			case LOGICO:
			case REGISTRO:
			case TENSOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				tipobasico();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(SLParser.SEMI, 0); }
		public OptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt; }
	}

	public final OptContext opt() throws RecognitionException {
		OptContext _localctx = new OptContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(111);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaidContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SLParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SLParser.COMMA, i);
		}
		public ListaidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaid; }
	}

	public final ListaidContext listaid() throws RecognitionException {
		ListaidContext _localctx = new ListaidContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_listaid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(ID);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(115);
				match(COMMA);
				setState(116);
				match(ID);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode NUMERICO_LITERAL() { return getToken(SLParser.NUMERICO_LITERAL, 0); }
		public TerminalNode CADENA_LITERAL() { return getToken(SLParser.CADENA_LITERAL, 0); }
		public TerminalNode LOGICO_LITERAL() { return getToken(SLParser.LOGICO_LITERAL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGICO_LITERAL) | (1L << NUMERICO_LITERAL) | (1L << CADENA_LITERAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipobasicoContext extends ParserRuleContext {
		public Tipobasico2Context tipobasico2() {
			return getRuleContext(Tipobasico2Context.class,0);
		}
		public TensorContext tensor() {
			return getRuleContext(TensorContext.class,0);
		}
		public TipobasicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipobasico; }
	}

	public final TipobasicoContext tipobasico() throws RecognitionException {
		TipobasicoContext _localctx = new TipobasicoContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_tipobasico);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERICO:
			case CADENA:
			case LOGICO:
			case REGISTRO:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				tipobasico2();
				}
				break;
			case TENSOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				tensor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipobasico2Context extends ParserRuleContext {
		public Tipobasico3Context tipobasico3() {
			return getRuleContext(Tipobasico3Context.class,0);
		}
		public RegistroContext registro() {
			return getRuleContext(RegistroContext.class,0);
		}
		public Tipobasico2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipobasico2; }
	}

	public final Tipobasico2Context tipobasico2() throws RecognitionException {
		Tipobasico2Context _localctx = new Tipobasico2Context(_ctx, getState());
		enterRule(_localctx, 28, RULE_tipobasico2);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERICO:
			case CADENA:
			case LOGICO:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				tipobasico3();
				}
				break;
			case REGISTRO:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				registro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipobasico3Context extends ParserRuleContext {
		public TerminalNode NUMERICO() { return getToken(SLParser.NUMERICO, 0); }
		public TerminalNode CADENA() { return getToken(SLParser.CADENA, 0); }
		public TerminalNode LOGICO() { return getToken(SLParser.LOGICO, 0); }
		public Tipobasico3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipobasico3; }
	}

	public final Tipobasico3Context tipobasico3() throws RecognitionException {
		Tipobasico3Context _localctx = new Tipobasico3Context(_ctx, getState());
		enterRule(_localctx, 30, RULE_tipobasico3);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMERICO) | (1L << CADENA) | (1L << LOGICO))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TensorContext extends ParserRuleContext {
		public TerminalNode TENSOR() { return getToken(SLParser.TENSOR, 0); }
		public TensorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tensor; }
	}

	public final TensorContext tensor() throws RecognitionException {
		TensorContext _localctx = new TensorContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_tensor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(TENSOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegistroContext extends ParserRuleContext {
		public TerminalNode REGISTRO() { return getToken(SLParser.REGISTRO, 0); }
		public RegistroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_registro; }
	}

	public final RegistroContext registro() throws RecognitionException {
		RegistroContext _localctx = new RegistroContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_registro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(REGISTRO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubrutinasContext extends ParserRuleContext {
		public List<SubrutinaContext> subrutina() {
			return getRuleContexts(SubrutinaContext.class);
		}
		public SubrutinaContext subrutina(int i) {
			return getRuleContext(SubrutinaContext.class,i);
		}
		public SubrutinasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subrutinas; }
	}

	public final SubrutinasContext subrutinas() throws RecognitionException {
		SubrutinasContext _localctx = new SubrutinasContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_subrutinas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUBRUTINA) {
				{
				{
				setState(138);
				subrutina();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubrutinaContext extends ParserRuleContext {
		public Token nombre_subrutina;
		public TerminalNode SUBRUTINA() { return getToken(SLParser.SUBRUTINA, 0); }
		public TerminalNode LEFT_PAR() { return getToken(SLParser.LEFT_PAR, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(SLParser.RIGHT_PAR, 0); }
		public ProcedimientoContext procedimiento() {
			return getRuleContext(ProcedimientoContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public TerminalNode ID() { return getToken(SLParser.ID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public SubrutinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subrutina; }
	}

	public final SubrutinaContext subrutina() throws RecognitionException {
		SubrutinaContext _localctx = new SubrutinaContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_subrutina);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(144);
			match(SUBRUTINA);
			setState(145);
			((SubrutinaContext)_localctx).nombre_subrutina = match(ID);
			setState(146);
			match(LEFT_PAR);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REF || _la==ID) {
				{
				setState(147);
				parametros();
				}
			}

			setState(150);
			match(RIGHT_PAR);
			}
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
			case TIPOS:
			case VAR:
				{
				setState(152);
				procedimiento();
				}
				break;
			case RETORNA:
				{
				setState(153);
				funcion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedimientoContext extends ParserRuleContext {
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode INICIO() { return getToken(SLParser.INICIO, 0); }
		public TerminalNode FIN() { return getToken(SLParser.FIN, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public ProcedimientoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimiento; }
	}
